# mai-programming

./: .gitmodules
lecture1/: CMakeLists.txt
lecture1/src/: hello-vsc.cpp  main.cpp
lecture2/: CMakeLists.txt
lecture2/inc/: foo_string.h
lecture2/src/: foo_string.cpp
lecture2/test/: test_foo_string.cpp
lecture3/: CMakeLists.txt  input.gift  output.txt
lecture3/inc/: gift.hpp  question.hpp  string_trimmer.hpp
lecture3/src/: gift.cpp  main.cpp  question.cpp  string_trimmer.cpp
lecture4/: CMakeLists.txt
lecture4/inc/: list.hpp
lecture5/: CMakeLists.txt
lecture5/inc/: unique_ptr.hpp
lecture5/src/: main.cpp  unique_ptr.tpp
lecture6/: CMakeLists.txt
lecture6/src/: binary_tree.cpp
lecture7/: CMakeLists.txt
lecture7/inc/: binary_tree.hpp
lecture7/src/: binary_tree.cpp  main.cpp
practice1/: CMakeLists.txt
practice1/inc/: dynamic_array.hpp
practice1/src/: dynamic_array.cpp  main.cpp
practice1/test/: test_dynamic_array.cpp
practice2/: CMakeLists.txt
practice2/inc/: dynamic_array.hpp
practice2/src/: dynamic_array.cpp  main.cpp
practice2_2/: CMakeLists.txt
practice2_2/inc/: dynamic_array.hpp
practice2_2/src/: dynamic_array.cpp  dynamic_array.tpp  main.cpp
practice3/: CMakeLists.txt
practice3/src/: main.cpp
